Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- LDAPBackingDirectory: added explicit filter for LDAP entries.
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- ZMI search uses unrestricted search method.
- BaseDirectory has unrestricted _editEntry and _creatEntry methods,
  used by meta and stacking directories.
  Access control is done by the primary directory, not by each backing.