@@ -6,7 +6,8 @@ New features:
 - LDAPBackingDirectory: added explicit filter for LDAP entries.
 Bug fixes:
 ~~~~~~~~~~
--
+- BaseDirectory: listEntryIdsAndTitles returned a list of tuples (id, id)
+  instead of (id, title)
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - ZMI search uses unrestricted search method.
